fix: scrollbar for playlists

--- a/user.css
+++ b/user.css
@@ -641,7 +641,8 @@ li.GlueDropTarget--playlists {
   height: 70%;
 }
 
-.main-rootlist-expandArrow {
+.main-rootlist-expandArrow,
+.pJFm5xRtKuufaI2uNf6w {
   color: var(--spice-text);
   position: relative;
   margin-inline-start: -32px;
@@ -650,7 +651,8 @@ li.GlueDropTarget--playlists {
   top: 17px;
 }
 
-.main-rootlist-expandArrowRotated {
+.main-rootlist-expandArrowRotated,
+.pJFm5xRtKuufaI2uNf6w {
   right: -5px !important;
   top: 14px !important;
 }
@@ -710,11 +712,24 @@ li.GlueDropTarget--playlists {
   display: none;
 }
 
-.main-rootlist-wrapper::-webkit-scrollbar {
+.vB_gmMwzmB3GcEliiiys:hover {
+  overflow-y: scroll;
+  margin-left: 4px;
+}
+
+.vB_gmMwzmB3GcEliiiys {
+  overflow-y: scroll;
+  margin-left: 4px;
+  height: calc(100vh - 500px) !important;
+}
+
+.main-rootlist-wrapper::-webkit-scrollbar,
+.vB_gmMwzmB3GcEliiiys::-webkit-scrollbar {
   width: 4px;
 }
 
-.main-rootlist-wrapper::-webkit-scrollbar-thumb {
+.main-rootlist-wrapper::-webkit-scrollbar-thumb,
+.vB_gmMwzmB3GcEliiiys::-webkit-scrollbar-thumb  {
   background-color: var(--spice-card);
   border-radius: var(--border-radius-2);
 }
